tests/errors/compiler/select_not_from_struct/select_from_int.c
struct id
{
	char lastname[20];   
	char firstname[20]; 
	int year;
};


int main()
{
	struct id structura;
	int structu;
	structu.year;
	return 0;
}
